<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fiuba.app.udrive.FileListActivity">
    <item android:id="@+id/action_profile" android:title="@string/action_profile"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_add_folder" android:title="@string/action_add_folder"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_upload_file" android:title="@string/action_upload_file"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_file_search" android:title="@string/action_file_search"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_show_trash" android:title="@string/action_show_trash"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_signout" android:title="@string/action_signout"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
