<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/email"
        android:id="@+id/email"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/password"
        android:layout_marginTop="10dp" />

    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:background="#f19c47"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.04"
        android:id="@+id/linear_layout"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_msg"
            android:id="@+id/sign_up_msg"
            android:layout_gravity="center_vertical"
            android:paddingLeft="62dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_link"
            android:id="@+id/sign_up_link"
            android:layout_gravity="center_vertical"
            android:linksClickable="true"
            android:autoLink="all"
            android:elegantTextHeight="false"
            android:textIsSelectable="false"
            android:textColor="#3a6af7" />
    </LinearLayout>

</LinearLayout>