<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fiuba.app.udrive.FileInfoActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!-- Filename -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/filename_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/ic_folder"
            android:paddingLeft="16dp"
            />
        <TextView
            android:id="@+id/tv_filename"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Test"
            android:textSize="20sp"
            android:typeface="sans"
            android:fontFamily="sans-serif-medium"
            android:layout_toRightOf="@+id/filename_icon"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            />
        <ImageView
            android:id="@+id/edit_filename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/ic_pencil_24"
            android:layout_alignParentRight="true"
            android:layout_marginRight="18dp"
            android:layout_marginTop="5dp"
            android:onClick="editFileName" />
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#c0c0c0"/>
    </RelativeLayout>

    <!-- File data -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="174dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp">
            <ImageView
                android:id="@+id/ic_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/ic_account_24"
                android:paddingLeft="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/owner"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/ic_account"
                android:layout_centerVertical="true"
                android:paddingLeft="2dp"/>
            <TextView
                android:id="@+id/label_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="User"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="135dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="28dp">
            <ImageView
                android:id="@+id/ic_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/ic_timelapse_24"
                android:paddingLeft="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/size"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/ic_account"
                android:paddingLeft="2dp"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/label_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="User"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="135dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="56dp">
            <ImageView
                android:id="@+id/ic_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/ic_calendar_clock_24"
                android:paddingLeft="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/lastUpd"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/ic_account"
                android:paddingLeft="2dp"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/label_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="User"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="135dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="84dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/by"
                android:textSize="14sp"
                android:paddingLeft="42dp"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/label_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="User"
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="135dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="112dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/from"
                android:textSize="14sp"
                android:paddingLeft="42dp"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/label_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="User"
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="135dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="140dp">
            <ImageView
                android:id="@+id/ic_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/ic_apps"
                android:paddingLeft="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/items"
                android:textSize="16sp"
                android:layout_toRightOf="@+id/ic_account"
                android:paddingLeft="2dp"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/label_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="User"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="135dp"/>
        </RelativeLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#c0c0c0"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <!-- Who has access -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/whohasaccess"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:layout_marginTop="4dp"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/list_access">
        </ListView>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#c0c0c0"
            android:layout_alignParentBottom="true"/>
    </LinearLayout>

    <!-- Tags -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/tags"
            android:textSize="20sp"
            android:paddingLeft="16dp"
            android:layout_marginTop="6dp"/>
        <WebView
            android:id="@+id/tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            />
    </RelativeLayout>
</LinearLayout>
</ScrollView>